kubernetes/apps/observability/kromgo/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
spec:
  hostnames:
    - "stats.${DOMAIN_DEV}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kromgo
          port: 8080
